# invoice-exception-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  Procfile  README.md  ROADMAP.md  agent_overview.html  decision_log.html  detailed_workflow.html  docs_index.html  pyproject.toml  status.html
config/: error_label_to_category.yaml  models.yaml  personas.yaml  policy_library.yaml  stage9_thresholds.yaml
docs/: CHANGELOG.md  PRD.md  archetypes_and_patterns_cheatsheet.md  architecture.md  authoring_golden_cases.md  decision_log.md  model_strategy.md  sap_sandbox_setup.md  subscription_mode_workflow.md  technical_design.md  test_corpus_design.md
scripts/: build_ceo_deck.py  build_context_data.py  demo_warmup.py  estimate_cost.py  eval_classifier.py  eval_extractor.py  eval_pipeline.py  generate_invoice_prompts.py  generate_invoices.py  ingest_bpi.py  ingest_subscription_responses.py  run_golden_set.py  seed_hitl_queue.py  validate_sap_connection.py
scripts/subscription_workflow/batch_logs/: invoice_batch_001.log.json  invoice_batch_002.log.json  invoice_batch_003.log.json  invoice_batch_004.log.json  invoice_batch_005.log.json  invoice_batch_006.log.json  invoice_batch_007.log.json  invoice_batch_008.log.json  invoice_batch_009.log.json  invoice_batch_010.log.json  invoice_batch_011.log.json  invoice_batch_012.log.json  invoice_batch_013.log.json  invoice_batch_014.log.json  invoice_batch_015.log.json  invoice_batch_016.log.json  invoice_batch_017.log.json  invoice_batch_018.log.json  invoice_batch_019.log.json  invoice_batch_020.log.json  invoice_batch_021.log.json  invoice_batch_022.log.json  invoice_batch_023.log.json  invoice_batch_024.log.json  invoice_batch_025.log.json  invoice_batch_026.log.json  invoice_batch_027.log.json  invoice_batch_028.log.json  invoice_batch_029.log.json  invoice_batch_030.log.json  invoice_batch_031.log.json  invoice_batch_032.log.json  invoice_batch_033.log.json  invoice_batch_034.log.json  invoice_batch_035.log.json  invoice_batch_036.log.json  invoice_batch_037.log.json  invoice_batch_038.log.json  invoice_batch_039.log.json  invoice_batch_040.log.json  (+58 more)
scripts/subscription_workflow/prompts/: _manifest.json  invoice_batch_001.md  invoice_batch_001.spec.json  invoice_batch_002.md  invoice_batch_002.spec.json  invoice_batch_003.md  invoice_batch_003.spec.json  invoice_batch_004.md  invoice_batch_004.spec.json  invoice_batch_005.md  invoice_batch_005.spec.json  invoice_batch_006.md  invoice_batch_006.spec.json  invoice_batch_007.md  invoice_batch_007.spec.json  invoice_batch_008.md  invoice_batch_008.spec.json  invoice_batch_009.md  invoice_batch_009.spec.json  invoice_batch_010.md  invoice_batch_010.spec.json  invoice_batch_011.md  invoice_batch_011.spec.json  invoice_batch_012.md  invoice_batch_012.spec.json  invoice_batch_013.md  invoice_batch_013.spec.json  invoice_batch_014.md  invoice_batch_014.spec.json  invoice_batch_015.md  invoice_batch_015.spec.json  invoice_batch_016.md  (+169 more)
src/p2p_agent/: __init__.py
tests/: conftest.py  test_golden_cases.py
tests/golden_cases/: GTC-001-clean-three-way-match.yaml  GTC-002-price-variance.yaml  GTC-003-duplicate-invoice.yaml  GTC-004-non-master-vendor.yaml  GTC-005-retroactive-invoice-no-po.yaml  GTC-006-quantity-over-delivery.yaml  GTC-007-split-invoice-fraud.yaml  GTC-008-missing-eu-vat.yaml  GTC-009-delivery-delay-notification.yaml  GTC-010-cross-currency-fx.yaml  GTC-011-missing-approval.yaml  GTC-012-missing-goods-receipt.yaml  GTC-013-payment-term-mismatch.yaml  GTC-014-india-gst-misrouted.yaml  GTC-015-brazil-icms-rate-mismatch.yaml  GTC-016-bank-detail-change-fraud.yaml  GTC-017-multi-line-price-variance.yaml  GTC-018-partial-short-delivery.yaml  GTC-019-recurring-services.yaml  GTC-020-emergency-po.yaml  GTC-021-sanctions-hit.yaml  GTC-022-capex-opex-mismatch.yaml  GTC-023-multi-po-invoice.yaml  GTC-024-strategic-vendor-tolerance.yaml
tests/integration/: test_hitl_demo.py  test_hitl_demo_execution.py  test_hitl_webapp.py  test_stage9_routes.py
tests/unit/: test_action_executor.py  test_hitl_queue.py  test_stage9_aggregator.py  test_stage9_recorder.py
(+186 files in other folders)
