[project]
name = "invoice-exception-agent"
version = "0.1.0"
description = "P2P Exception Orchestrator — multi-system AI agent for procure-to-pay invoice exception handling."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tribhuvan Joshi", email = "trjoshi1907@gmail.com" },
]
license = { text = "MIT" }

dependencies = [
    # Core orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Data models
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # LLM client
    "openai>=1.40",  # OpenAI-compatible client; used for OpenRouter too
    "anthropic>=0.40",  # closed-model fallback
    # HTTP
    "httpx>=0.27",
    "tenacity>=8.5",  # retry / backoff
    # Storage
    "psycopg[binary]>=3.2",  # Postgres
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    # Embeddings (open-source first)
    "sentence-transformers>=3.0",
    # Logging
    "structlog>=24.4",
    # Configuration
    "pyyaml>=6.0",
    # CLI / scripts
    "typer>=0.12",
    "rich>=13.7",
    # Document handling
    "pypdf>=4.3",
    "weasyprint>=62.0",  # synthetic PDF generation
    # Process mining data
    "pm4py>=2.7",  # BPI Challenge XES parsing
    # Date / time
    "python-dateutil>=2.9",
    # HITL approval queue + demo webapp
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",  # FastAPI form posts
    # Env loading — picked up by src/p2p_agent/__init__.py so .env auto-loads
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1",
    "ipykernel>=6.29",  # for notebooks
    "jupyter>=1.0",
    "python-pptx>=1.0",  # generates the buyer / CEO demo deck
]

self-host = [
    # Only when self-hosting models for buyer deployments
    "vllm>=0.6",
    "transformers>=4.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p2p_agent"]

# --- ruff -----------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "N",        # pep8-naming
    "ANN",      # type annotations
    "S",        # bandit security
    "C4",       # comprehensions
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    "ANN401",   # allow Any in some places
    "S101",     # assert in tests is fine
    "S603",     # subprocess call security — too noisy
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"scripts/**" = ["S"]

[tool.ruff.format]
quote-style = "double"

# --- pyright --------------------------------------------------------------

[tool.pyright]
include = ["src", "tests", "scripts"]
exclude = ["**/__pycache__", "test_corpus", "notebooks"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

# --- pytest ---------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "golden: marks tests as golden-case regression tests (run on every build)",
    "integration: marks tests requiring ERP sandbox connectivity",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "needs_api_key: marks tests requiring real LLM API keys",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]

# --- coverage -------------------------------------------------------------

[tool.coverage.run]
source = ["src/p2p_agent"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
